jenkins-svc7.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
  namespace: jenkins
spec:
  selector:
    app: jenkins
  type: ClusterIP 
  ports:
  - name: http
    port: 8080
    protocol: TCP
  - name: jnlp
    port: 50000
    protocol: TCP
