jenkins-ingress6.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: jenkins
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: jenkins.huzailing.com
    http:
      paths:
      - path: /
        backend:
          serviceName: "jenkins"
          servicePort: 8080
  tls:
  - hosts:
    - jenkins.huzailing.com
    secretName: jenkins
